# raytracer

./: .gitignore  CMakeLists.txt  raytracer.sln
raytracer/: Camera.h  Canvas.cpp  Canvas.h  Color.h  Intersection.h  Intersections.cpp  Intersections.h  Lighting.cpp  Lighting.h  Material.h  Matrix.h  Point.h  PointLight.h  Ray.cpp  Ray.h  RayComputations.h  Shape.h  Sphere.cpp  Sphere.h  Tuple.h  Vector.h  World.cpp  World.h  clock.ppm  consts.h  projectile.ppm  raytracer.cpp  raytracer.vcxproj  raytracer.vcxproj.filters
raytracer_test/: raytracer_test.vcxproj  test.cpp
